--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
     "start": "node ES6-Trainning/demo.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "npm-run-all": "3.1.1"
+  }
 }
